--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
@@ -1,5 +1,11 @@
 .hrTimeSheet {
-  margin-bottom: 80px;
+  margin-bottom: 48px;
+  .textEllipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 15.6vw;
+  }
   .noTimeSheetData {
     text-align: center;
     color: rgba(0, 0, 0, 0.1);
@@ -42,10 +48,9 @@
   }
 
   .timeCheckCntr {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
+    position: absolute;
+    top: -2px;
+    left: 0;
     cursor: pointer;
     font-size: 22px;
     -webkit-user-select: none;
@@ -66,11 +71,11 @@
     .checkmark {
       border-radius: 5px;
       position: absolute;
-      left: 0;
-      height: 25px !important;
-      width: 25px !important;
+      height: 22px !important;
+      width: 22px !important;
       background-color: #eee;
-      top: -4px;
+      top: 0;
+      left: 0;
       border: 1px solid #dcdcdc;
     }
 
@@ -81,7 +86,7 @@
 
     /* When the checkbox is checked, add a blue background */
     input:checked ~ .checkmark {
-      background-color: #2196f3;
+      background-color: #34b8bc;
     }
 
     /* Create the checkmark/indicator (hidden when not checked) */
@@ -98,8 +103,8 @@
 
     /* Style the checkmark/indicator */
     .checkmark:after {
-      left: 9px;
-      top: 5px;
+      left: 7px;
+      top: 4px;
       width: 5px;
       height: 10px;
       border: solid white;
@@ -110,17 +115,15 @@
     }
   }
   .WeeklyTimeProgress {
-    max-height: 53vh;
+    max-height: 49vh;
     overflow-x: hidden;
     overflow-y: auto;
     padding-bottom: 20px;
 
     .dailyTimeProgress {
       border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
-      padding-top: 0;
-      padding-bottom: 10px;
-      margin: 10px;
       font-size: 0.9rem;
+      padding: 10px 0;
 
       div:first-child {
         font-size: 0.85rem;
@@ -131,9 +134,10 @@
         padding-right: 0;
 
         .progress {
+          margin-top: 5px;
           height: 0.5rem;
-          margin-top: 0.4rem;
           margin-left: 30px;
+          width: 93%;
           .progress-bar {
             position: relative;
             background-color: #e8e8e8;
@@ -185,13 +189,13 @@
             }
           }
           .checkIn {
-            left: 40px;
+            left: 45px;
           }
           .totalHr {
             left: 42.5%;
           }
           .checkOut {
-            right: 0;
+            right: 35px;
           }
         }
         &:hover {
@@ -213,32 +217,32 @@
         &.absentCntr {
           background: rgba(255, 0, 0, 0.2);
           border: 1px solid rgba(255, 0, 0, 0.5);
-          left: 25vw;
-          top: 2px;
+          left: 30vw;
+          top: -2px;
         }
         &.paidLeaveCntr {
           background: rgba(0, 186, 190, 0.2);
           border: 1px solid rgba(0, 186, 190, 0.5);
-          left: 24.8vw;
-          top: 2px;
+          left: 30.8vw;
+          top: -2px;
         }
         &.unPaidLeaveCntr {
           background: rgba(255, 0, 0, 0.2);
           border: 1px solid rgba(255, 0, 0, 0.5);
-          left: 24.3vw;
-          top: 2px;
+          left: 30.3vw;
+          top: -2px;
         }
         &.holidayCntr {
           background: rgba(0, 17, 255, 0.2);
           border: 1px solid rgba(0, 17, 255, 0.5);
-          left: 25.3vw;
-          top: 2px;
+          left: 30.3vw;
+          top: -2px;
         }
         &.weekOffCntr {
           background: rgba(0, 0, 0, 0.2);
           border: 1px solid rgba(0, 0, 0, 0.5);
-          left: 24.9vw;
-          top: 2px;
+          left: 29.4vw;
+          top: -2px;
         }
       }
     }
